@@ -38,8 +38,8 @@ switch idx(1).type
             
         else % ok, only one level of indexing
             
-            d = size(x, 2);
-            L = length(idx(1).subs);
+            d = size (x, 2);
+            L = length (idx(1).subs);
             
             if d == 1, % univariate dataframe
                 
@@ -78,6 +78,8 @@ switch idx(1).type
             r = get (x, 'rownames');
             if ~ isempty (r),
                 r = r(I);
+            elseif ~ isequal (I, 1:length(I))
+                r = cellfun (@num2str, num2cell (I(:)), 'UniformOutput', false);
             end
             
             t = stk_dataframe (x.data(I, J), c, r);
@@ -138,6 +140,10 @@ end % function subsref
 %!test % legacy feature: data.a returns the whole dataframe otherwise
 %! data = set(data, 'colnames', {'x1', 'x2'});
 %! assert(isequal(data.a, u));
+
+%!test % select rows and columns
+%! x = stk_dataframe (reshape (1:15, 5, 3), {'u' 'v' 'w'});
+%! assert (isequal (x([3 5], 2), stk_dataframe ([8; 10], {'v'}, {'3'; '5'})));
 
 %--- tests with a univariate dataframe ----------------------------------------
 
